--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -7,22 +7,38 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/thumbnail_iv"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_weight="2"
-        android:adjustViewBounds="false"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/baseline_image_black_48" />
-
-    <TextView
-        android:id="@+id/title_tv"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_weight="2"
-        android:text="TextView"
-        android:textSize="18sp" />
+        app:cardElevation="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/thumbnail_iv"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_weight="3"
+                android:adjustViewBounds="false"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/baseline_image_black_48" />
+
+            <TextView
+                android:id="@+id/title_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
