--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,13 +5,14 @@
         <item name="colorPrimary">#000000</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnBackground">@color/background</item>
+        <item name="cardBackgroundColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#F7BF0027</item>
         <item name="colorSecondaryVariant">#009688</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.FlickrBrowser.NoActionBar">
